# lox

./: .clang-format  .gitignore  .ignore  CMakeLists.txt  build.sh  compile_commands.json  neovim.json  run.sh  tests.sh
scripts/: build.sh  run.sh
src/: AstPrinter.cpp  AstPrinter.hpp  CMakeLists.txt  Expr.hpp  ExprType.hpp  GenerateAst.py  Interpreter.hpp  Literal.hpp  Lox.cpp  Lox.hpp  Main.cpp  Object.hpp  ObjectType.hpp  Parser.cpp  Parser.hpp  Scanner.cpp  Scanner.hpp  Token.cpp  Token.hpp  TokenType.hpp
src/common/: AST.hpp  Expr.hpp  Stmt.hpp  Token.cpp  Token.hpp  Value.cpp  Value.hpp  Visitor.hpp  expr.hpp
src/errors/: ParsingError.hpp  RuntimeError.hpp  ScanningError.hpp
src/evaluator/: Interpreter.cpp  Interpreter.hpp
src/parser/: Parser.cpp  Parser.hpp
src/printer/: ASTPrinter.hpp  AstPrinter.cpp  AstPrinter.hpp
src/printer2/: AstPrinter.hpp
src/runner/: Runner.cpp  Runner.hpp
src/scanner/: Scanner.cpp  Scanner.hpp
src/tests/: Tests.cpp
